lib_LTLIBRARIES = libassembly.la
libassembly_la_SOURCES = catalog.cpp database.cpp filesystem.cpp filesystem_linux.cpp manifest.cpp package.cpp stringutil.cpp
libassembly_la_LDFLAGS = -version-info 1:1:0
libassembly_la_LIBADD  = -lstdc++
libassembly_la_CXXFLAGS = -std=c++14
pkginclude_HEADERS = catalog.hpp database.hpp filesystem.hpp manifest.hpp package.hpp components.hpp stringutil.hpp